Create profile page

--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <app-timeline></app-timeline>
+          <app-timeline [tweets]="tweets"></app-timeline>
         </div>
       </div>
     </div>
