--- a/client/src/main/client/src/app/tweet/tweet.component.html
+++ b/client/src/main/client/src/app/tweet/tweet.component.html
@@ -1,7 +1,14 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title"><a href="#">{{tweet.owner.profile.name}}</a></h5>
-    <h6 class="card-subtitle mb-2 text-muted"><a href="#">@{{tweet.owner.profile.username}}</a> • <a href="#" title="{{getAbsoluteDate()}}">{{getRelativeDate()}}</a></h6>
+    <div class="row">
+      <div class="col-md-2">
+        <img width="48" height="48" src="/api/users/{{tweet.owner.profile.username}}/picture?size=48" alt="Profile picture for {{tweet.owner.profile.name}}">
+      </div>
+      <div class="col-md-auto">
+        <h5 class="card-title"><a [routerLink]="['/u/' + tweet.owner.profile.username]">{{tweet.owner.profile.name}}</a></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><a [routerLink]="['/u/' + tweet.owner.profile.username]">@{{tweet.owner.profile.username}}</a> • <a href="#" data-toggle="tooltip" title="{{getAbsoluteDate()}}">{{getRelativeDate()}}</a></h6>
+      </div>
+    </div>
     <p class="card-text">{{tweet.content}}</p>
     <a class="card-link" href="#"><fa name="reply"></fa></a>
   </div>
