--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center" *ngIf="user">
     <div class="col-sm-3">
-      <img width="100%" src="/api/users/{{user.profile.username}}/picture?size=512" class="rounded-circle">
+      <img width="100%" src="/api/users/{{user.profile.username}}/picture?size=512" class="rounded-circle mb-3">
       <h5 class="mb-1">{{user.profile.name}}</h5>
       <h6 class="text-muted mb-3">@{{user.profile.username}}</h6>
       <p *ngIf="user.profile.bio">{{user.profile.bio}}</p>
