--- a/client/src/main/client/src/app/tweet/tweet.component.html
+++ b/client/src/main/client/src/app/tweet/tweet.component.html
@@ -10,10 +10,10 @@
       </div>
     </div>
     <p class="card-text">
-      <ng-container *ngFor="let word of getWords()" [ngSwitch]="word.type"><!-- Comments required to trick HTML in not rendering new lines
-     --><ng-template [ngSwitchCase]="'hashtag'"><a [routerLink]="['/trend/' + word.link]">{{word.value}}</a></ng-template><!--
-     --><ng-template [ngSwitchCase]="'mention'"><a [routerLink]="['/u/' + word.link]">{{word.value}}</a></ng-template><!--
-     --><ng-template ngSwitchDefault>{{word.value}}</ng-template><!--
+      <ng-container *ngFor="let group of getWordGroups()" [ngSwitch]="group.type"><!-- Comments required to trick HTML in not rendering new lines
+     --><ng-template [ngSwitchCase]="'hashtag'"><a [routerLink]="['/trend/' + group.link]">{{group.value}}</a></ng-template><!--
+     --><ng-template [ngSwitchCase]="'mention'"><a [routerLink]="['/u/' + group.link]">{{group.value}}</a></ng-template><!--
+     --><ng-template ngSwitchDefault>{{group.value}}</ng-template><!--
    --></ng-container>
     </p>
     <a class="card-link" href="#"><fa name="reply"></fa></a>
