--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -13,9 +13,9 @@
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="row">
+      <div class="row mb-4">
         <div class="col-sm-12">
-          Add tweet
+          <app-add-tweet></app-add-tweet>
         </div>
       </div>
       <div class="row">
