--- a/client/src/main/client/src/app/add-tweet/add-tweet.component.html
+++ b/client/src/main/client/src/app/add-tweet/add-tweet.component.html
@@ -6,9 +6,17 @@
 </div>
 <form (ngSubmit)="tweet()">
   <div class="form-group">
-    <textarea id="tweet" class="form-control" placeholder="What's going on?" [(ngModel)]="content" name="content" required maxlength="140" rows="5"></textarea>
+    <textarea id="tweet"
+              class="form-control"
+              placeholder="What's going on?"
+              [(ngModel)]="content" name="content"
+              required
+              maxlength="140"
+              (keydown.control.enter)="onEnterKey($event)"
+              rows="5">
+    </textarea>
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary pull-right" [disabled]="isDisabled()">Tweet</button>
+    <button type="submit" class="btn btn-primary pull-right" [disabled]="isDisabled()" #submit>Tweet</button>
   </div>
 </form>
