--- a/client/src/main/client/src/app/add-tweet/add-tweet.component.html
+++ b/client/src/main/client/src/app/add-tweet/add-tweet.component.html
@@ -7,7 +7,7 @@
 <form (ngSubmit)="tweet()">
   <div class="form-group">
     <textarea id="tweet"
-              class="form-control"
+              class="form-control mb-2"
               placeholder="What's going on?"
               [(ngModel)]="content" name="content"
               required
@@ -19,9 +19,11 @@
               #textarea>
     </textarea>
     <div class="list-group" *ngIf="autocompleteValues !== null">
-      <a class="list-group-item list-group-item-action" [class.active]="i === autocompleteSelection"
+      <a class="list-group-item list-group-item-action d-flex flex-row align-items-center" [class.active]="i === autocompleteSelection"
          *ngFor="let user of autocompleteValues; index as i" (click)="acceptSuggestion(i); false;" href="">
-        @{{user.profile.username}} - {{user.profile.name}}
+        <img width="24" height="24" src="/api/users/{{user.profile.username}}/picture?size=24" alt="Profile picture for {{user.profile.name}}" class="mr-2">
+        <h5 class="mb-0 mr-2">@{{user.profile.username}}</h5>
+        <h6 class="mb-0 text-muted">{{user.profile.name}}</h6>
       </a>
     </div>
   </div>
