--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -1,37 +1,37 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-sm-3">
+    <div class="col-md-3">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           Profile
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           Trends
         </div>
       </div>
     </div>
-    <div class="col-sm-6">
+    <div class="col-md-6">
       <div class="row mb-4">
-        <div class="col-sm-12">
+        <div class="col">
           <app-add-tweet></app-add-tweet>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           <app-timeline [tweets]="tweets"></app-timeline>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-md-3">
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           Who to follow
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
           About
         </div>
       </div>
