--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-3">
+    <div class="col-md-3 d-none d-md-block">
       <div class="row">
         <div class="col">
           Profile
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 d-none d-md-block">
       <div class="row">
         <div class="col">
           Who to follow
