--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -13,7 +13,7 @@
     <div class="col-md-6">
       <app-timeline [tweets]="tweets"></app-timeline>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 d-none d-md-block">
       <div class="row">
         <div class="col">
           Who to follow
