--- a/client/src/main/client/src/app/tweet/tweet.component.html
+++ b/client/src/main/client/src/app/tweet/tweet.component.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-auto">
         <img width="48" height="48" src="/api/users/{{tweet.owner.profile.username}}/picture?size=48" alt="Profile picture for {{tweet.owner.profile.name}}">
       </div>
-      <div class="col-md-auto">
+      <div class="col pl-0">
         <h5 class="card-title"><a [routerLink]="['/u/' + tweet.owner.profile.username]">{{tweet.owner.profile.name}}</a></h5>
         <h6 class="card-subtitle mb-2 text-muted"><a [routerLink]="['/u/' + tweet.owner.profile.username]">@{{tweet.owner.profile.username}}</a> • <a [routerLink]="['/tweet/' + tweet.id]" data-toggle="tooltip" title="{{getAbsoluteDate()}}">{{getRelativeDate()}}</a></h6>
       </div>
