--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-2">
   <div class="row justify-content-center">
     <div class="col-md-3 d-none d-md-block">
       <div class="row">
@@ -32,7 +32,7 @@
       </div>
       <div class="row">
         <div class="col">
-          About
+          <app-about></app-about>
         </div>
       </div>
     </div>
