Implement flaging tweets

--- a/client/src/main/client/src/app/tweet/tweet.component.html
+++ b/client/src/main/client/src/app/tweet/tweet.component.html
@@ -18,6 +18,6 @@
     </p>
     <a class="card-link"><fa name="reply"></fa></a>
     <a class="card-link" href="#" (click)="like(); false;"><fa name="heart"></fa>{{tweet.likedBy.length}}</a>
-    <a class="card-link"><fa name="flag"></fa></a>
+    <a class="card-link" href="#" (click)="flag(); false;"><fa name="flag"></fa></a>
   </div>
 </div>
