Implement reply button

--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -15,12 +15,12 @@
     <div class="col-md-6">
       <div class="row mb-4">
         <div class="col">
-          <app-add-tweet></app-add-tweet>
+          <app-add-tweet [replyClicked]="replyClicked"></app-add-tweet>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <app-timeline [tweets]="tweets"></app-timeline>
+          <app-timeline [tweets]="tweets" (replyClicked)="onReplyClicked($event)"></app-timeline>
         </div>
       </div>
     </div>
