Fix likes button

--- a/client/src/main/client/src/app/tweet/tweet.component.html
+++ b/client/src/main/client/src/app/tweet/tweet.component.html
@@ -17,7 +17,7 @@
    --></ng-container>
     </p>
     <a class="card-link" href="#" (click)="replyClicked.emit(tweet); false;"><fa name="reply"></fa></a>
-    <a class="card-link" href="#" (click)="like(); false;"><fa name="heart"></fa>{{tweet.likedBy.length}}</a>
+    <a class="card-link" href="#" (click)="like(); false;"><fa name="heart"></fa>{{getLikesCount()}}</a>
     <a class="card-link" href="#" (click)="flag(); false;"><fa name="flag"></fa></a>
   </div>
 </div>
