--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row">
         <div class="col">
-          Trends
+          <app-trends></app-trends>
         </div>
       </div>
       <div class="row">
