--- a/client/src/main/client/src/app/home/home.component.html
+++ b/client/src/main/client/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="row">
         <div class="col">
-          Trends
+          <app-trends></app-trends>
         </div>
       </div>
     </div>
