Add profile card

--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -14,12 +14,12 @@
       <app-timeline [tweets]="tweets"></app-timeline>
     </div>
     <div class="col-md-3 d-none d-md-block">
-      <div class="row">
+      <div class="row mb-4">
         <div class="col">
           Who to follow
         </div>
       </div>
-      <div class="row">
+      <div class="row mb-4">
         <div class="col">
           <app-trends></app-trends>
         </div>
