--- a/client/src/main/client/src/app/hashtag/hashtag.component.html
+++ b/client/src/main/client/src/app/hashtag/hashtag.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-2">
   <div class="row justify-content-center">
     <div class="col-md-3 d-none d-md-block">
-      <div class="row">
+      <div class="row mb-4">
         <div class="col">
-          Profile
+          <app-profile-card></app-profile-card>
         </div>
       </div>
       <div class="row">
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="col-md-3 d-none d-md-block">
-      <div class="row">
+      <div class="row mb-4">
         <div class="col">
           Who to follow
         </div>
