--- a/client/src/main/client/src/app/mentions/mentions.component.html
+++ b/client/src/main/client/src/app/mentions/mentions.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-3 d-none d-md-block">
       <div class="row mb-4">
         <div class="col">
-          <app-profile-card></app-profile-card>
+          <app-profile-card [user]="user"></app-profile-card>
         </div>
       </div>
       <div class="row">
