--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -32,7 +32,22 @@
       </div>
     </div>
     <div class="col-md-6">
-      <app-timeline [tweets]="tweets"></app-timeline>
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="tweets-tab" data-toggle="tab" href="#tweets" role="tab" aria-controls="tweets" aria-selected="true">Tweets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="likes-tab" data-toggle="tab" href="#likes" role="tab" aria-controls="likes" aria-selected="false">Likes</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="tweets" role="tabpanel" aria-labelledby="tweets-tab">
+          <app-timeline [tweets]="tweets"></app-timeline>
+        </div>
+        <div class="tab-pane fade" id="likes" role="tabpanel" aria-labelledby="likes-tab">
+          <app-timeline [tweets]="likes"></app-timeline>
+        </div>
+      </div>
     </div>
     <div class="col-md-3 d-none d-md-block">
       <div class="row mb-4">
