--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <ul class="nav nav-tabs mb-2" id="myTab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active" id="tweets-tab" data-toggle="tab" href="#tweets" role="tab" aria-controls="tweets" aria-selected="true">Tweets</a>
         </li>
