--- a/client/src/main/client/src/app/edit-profile/edit-profile.component.html
+++ b/client/src/main/client/src/app/edit-profile/edit-profile.component.html
@@ -1,6 +1,31 @@
 <div class="container mt-2">
   <div class="row justify-content-center" *ngIf="user && user.profile.username === username">
-    <div class="col">
+    <div class="col-md-3">
+      <div class="row mb-2">
+        <div class="col">
+          <img width="100%" src="/api/users/{{user.profile.username}}/picture?size=512" class="rounded-circle mb-3">
+          <h5 class="mb-1">{{user.profile.name}}</h5>
+          <h6 class="text-muted mb-3">@{{user.profile.username}}</h6>
+          <p *ngIf="user.profile.bio">{{user.profile.bio}}</p>
+          <div *ngIf="user.profile.location">
+            <span *ngIf="user.profile.location.latitude && user.profile.location.longitude"><fa name="map-marker"></fa> <a href="{{getLocationQuery(user.profile.location)}}" target="_blank" >{{user.profile.location.label}}</a></span>
+            <span *ngIf="!(user.profile.location.latitude && user.profile.location.longitude) && user.profile.location.label"><fa name="map-marker"></fa> {{user.profile.location.label}}</span>
+          </div>
+          <p *ngIf="user.profile.website"><fa name="globe"></fa> <a href="{{user.profile.website}}" target="_blank">{{user.profile.website}}</a></p>
+        </div>
+      </div>
+      <div class="row mb-4 d-none d-md-block">
+        <div class="col">
+          <app-user-list title="Followers" [users]="followers"></app-user-list>
+        </div>
+      </div>
+      <div class="row mb-4 d-none d-md-block">
+        <div class="col">
+          <app-user-list title="Following" [users]="following"></app-user-list>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
       <form (ngSubmit)="createProfile()" #form="ngForm">
         <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
           {{errorMessage}}
@@ -35,6 +60,18 @@
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="!form.form.valid">Submit</button>
       </form>
+    </div>
+    <div class="col-md-3 d-none d-md-block">
+      <div class="row mb-4">
+        <div class="col">
+          <app-trends></app-trends>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <app-about></app-about>
+        </div>
+      </div>
     </div>
   </div>
   <div class="row justify-content-center" *ngIf="user && user.profile.username !== username">
