--- a/client/src/main/client/src/app/header/header.component.html
+++ b/client/src/main/client/src/app/header/header.component.html
@@ -15,8 +15,9 @@
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" [(ngModel)]="query" (input)="onInput()" name="query">
     </form>
-    <form class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-      <input class="form-control mr-sm-2" type="text" placeholder="Login" aria-label="Login" [(ngModel)]="username" name="username">
+    <form class="form-inline my-2 my-lg-0" (ngSubmit)="login()" *ngIf="!loggedIn">
+      <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username" [(ngModel)]="username" name="username">
+      <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password" [(ngModel)]="password" name="password">
       <button class="btn my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
