--- a/client/src/main/client/src/app/app.component.html
+++ b/client/src/main/client/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <router-outlet></router-outlet>
 </ng-container>
-<ng-container *ngIf="!loggedIn">
+<ng-container *ngIf="!loggedIn && !checkingRefresh">
   <nav class="navbar navbar-expand navbar-dark bg-primary">
     <div class="navbar-brand">
       Kwetter
