Revoke tokens from frontend

--- a/client/src/main/client/src/app/profile/profile.component.html
+++ b/client/src/main/client/src/app/profile/profile.component.html
@@ -23,6 +23,7 @@
       <div class="row mb-4" *ngIf="isMe()">
         <div class="col">
           <button class="btn btn-primary" [routerLink]="['edit']">Edit</button>
+          <button class="btn btn-outline-primary" [routerLink]="['tokens']">Tokens</button>
         </div>
       </div>
       <div class="row mb-4 d-none d-md-block">
