--- a/client/src/main/client/src/app/edit-profile/edit-profile.component.html
+++ b/client/src/main/client/src/app/edit-profile/edit-profile.component.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      <form (ngSubmit)="createProfile()" #form="ngForm">
+      <form (ngSubmit)="createProfile()" #form="ngForm" class="validation-hints">
         <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="errorMessage">
           {{errorMessage}}
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
