--- a/client/src/main/client/src/styles.css
+++ b/client/src/main/client/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+.hr-text {
+  display: flex;
+  flex-basis: 100%;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.35);
+  margin: 8px 0;
+}
+
+.hr-text::before, .hr-text::after {
+  content: "";
+  flex-grow: 1;
+  background: rgba(0, 0, 0, 0.35);
+  height: 1px;
+  font-size: 0;
+  line-height: 0;
+  margin: 0 8px;
+}
+
+form.validation-hints .ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+form.validation-hints .ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
