--- a/client/src/main/client/src/app/app.component.html
+++ b/client/src/main/client/src/app/app.component.html
@@ -1,30 +1,25 @@
+<app-header [loggedIn]="loggedIn"></app-header>
 <ng-container *ngIf="loggedIn">
-  <app-header></app-header>
   <router-outlet></router-outlet>
 </ng-container>
 <ng-container *ngIf="!loggedIn && !checkingRefresh">
-  <nav class="navbar navbar-expand navbar-dark bg-primary">
-    <div class="navbar-brand">
-      Kwetter
-    </div>
-  </nav>
   <div class="container mt-2">
     <div class="row justify-content-center">
       <div class="col-md-5">
         <h4>Login</h4>
         <form (ngSubmit)="login()" #loginForm="ngForm">
           <div class="form-group">
-            <label for="username">Username</label>
-            <input class="form-control" type="text" placeholder="Username" aria-label="Username" [(ngModel)]="username" name="username"
+            <label for="username">{{'USERNAME' | translate}}</label>
+            <input class="form-control" type="text" placeholder="{{'USERNAME' | translate}}" aria-label="Username" [(ngModel)]="username" name="username"
                    id="username" required>
           </div>
 
           <div class="form-group">
-            <label for="password">Password</label>
-            <input class="form-control" type="password" placeholder="Password" aria-label="Password" [(ngModel)]="password"
+            <label for="password">{{'PASSWORD' | translate}}</label>
+            <input class="form-control" type="password" placeholder="{{'PASSWORD' | translate}}" aria-label="Password" [(ngModel)]="password"
                    name="password" id="password" required>
           </div>
-          <button class="btn btn-primary" type="submit" [disabled]="loginForm.form.dirty && !loginForm.form.valid">Login</button>
+          <button class="btn btn-primary" type="submit" [disabled]="loginForm.form.dirty && !loginForm.form.valid">{{'LOGIN' | translate}}</button>
         </form>
       </div>
       <div class="col-md-2 hr-text">
