--- a/client/src/main/client/src/app/header/header.component.html
+++ b/client/src/main/client/src/app/header/header.component.html
@@ -6,21 +6,31 @@
     Kwetter
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-        <a class="nav-link" [routerLink]="['']">Home</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/mentions']">Mentions</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" [(ngModel)]="query" (input)="onInput()" name="query">
-    </form>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" (click)="logout()" href="#">Logout</a>
+        <a class="nav-link" (click)="setLanguage('en')">en</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="setLanguage('nl')">nl</a>
       </li>
     </ul>
+    <ng-container *ngIf="loggedIn">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <a class="nav-link" [routerLink]="['']">Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/mentions']">Mentions</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" [(ngModel)]="query" (input)="onInput()" name="query">
+      </form>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()" href="#">Logout</a>
+        </li>
+      </ul>
+    </ng-container>
   </div>
 </nav>
