Add translations for en and nl

--- a/client/src/main/client/src/app/about/about.component.html
+++ b/client/src/main/client/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="card">
   <div class="card-body">
-    <span class="text-muted">© {{getYear()}} Kwetter</span>
+    <span class="text-muted">{{'COPYRIGHT' | translate:{year:getYear()} }}</span>
   </div>
 </div>
