--- a/client/src/main/client/src/app/profile-card/profile-card.component.html
+++ b/client/src/main/client/src/app/profile-card/profile-card.component.html
@@ -12,13 +12,13 @@
     </div>
     <div class="row">
       <div class="col-4">
-        <span class="text-small">Tweets</span>
+        <span class="text-small">{{'TWEETS' | translate}}</span>
       </div>
       <div class="col-4">
-        <span class="text-small">Following</span>
+        <span class="text-small">{{'FOLLOWING' | translate}}</span>
       </div>
       <div class="col-4">
-        <span class="text-small">Followers</span>
+        <span class="text-small">{{'FOLLOWERS' | translate}}</span>
       </div>
     </div>
     <div class="row">
