--- a/client/src/main/client/src/app/hashtag/hashtag.component.html
+++ b/client/src/main/client/src/app/hashtag/hashtag.component.html
@@ -15,7 +15,7 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col">
-          <h4>Showing tweets for <em>#{{hashtag}}</em>:</h4>
+          <h4 [innerHtml]="'SHOWING_TWEETS_FOR' | translate:{term: '#' + hashtag}"></h4>
         </div>
       </div>
       <div class="row">
