--- a/client/src/main/client/src/app/header/header.component.html
+++ b/client/src/main/client/src/app/header/header.component.html
@@ -3,15 +3,15 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="navbar-brand">
-    Kwetter
+    {{'BRAND' | translate}}
   </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" (click)="setLanguage('en')">en</a>
+        <a class="nav-link" (click)="setLanguage('en')"><span class="flag-icon flag-icon-gb"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="setLanguage('nl')">nl</a>
+        <a class="nav-link" (click)="setLanguage('nl')"><span class="flag-icon flag-icon-nl"></span></a>
       </li>
     </ul>
     <ng-container *ngIf="loggedIn">
@@ -20,15 +20,15 @@
           <a class="nav-link" [routerLink]="['']">Home</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/mentions']">Mentions</a>
+          <a class="nav-link" [routerLink]="['/mentions']">{{'MENTIONS' | translate}}</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" [(ngModel)]="query" (input)="onInput()" name="query">
+        <input class="form-control mr-sm-2" type="text" placeholder="{{'SEARCH' | translate}}" aria-label="Search" [(ngModel)]="query" (input)="onInput()" name="query">
       </form>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" (click)="logout()" href="#">Logout</a>
+          <a class="nav-link" (click)="logout()" [routerLink]="['']">{{'LOGOUT' | translate}}</a>
         </li>
       </ul>
     </ng-container>
