--- a/client/src/main/client/src/app/trends/trends.component.html
+++ b/client/src/main/client/src/app/trends/trends.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <h5 class="card-header">Trends</h5>
+  <h5 class="card-header">{{'TRENDS' | translate}}</h5>
   <div class="list-group list-group-flush">
     <a [routerLink]="['/hashtag/' + trend[0]]" class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let trend of trends">#{{trend[0]}} <span class="badge badge-primary badge-pill">{{trend[1]}}</span></a>
   </div>
